# esp32-lang-lab

./: .gitignore  LICENSE
.github/wokrflows/: build-rust-no_std-hello-world.yaml
.github/workflows/: build-c-esp-idf-hello-world.yaml  build-python-circuitpython-hello-world.yaml  build-python-micropython-hello-world.yaml  build-rust-no_std-hello-world.yaml  build-rust-std-hello-world.yaml  build-zig-esp-idf-hello-world.yaml
docs/: README.md
examples/arduino/hello_world/: hello_world.ino
examples/c/esp-idf-v5/get-started/hello_world/main/: hello_world_main.c
examples/cirtuitpython/: README.md
examples/cirtuitpython/hello_world/: code.py
examples/micropython/: README.md
examples/python/circuitpython/hello_world/: code.py
examples/python/micropython/: README.md
examples/python/micropython/hello_world/: main.py
examples/rust/no_std/: README.md
examples/rust/no_std/hello-world/: Cargo.toml  rust-toolchain.toml  wokwi.toml
examples/rust/no_std/hello-world/.cargo/: config.toml
examples/rust/no_std/hello-world/src/: main.rs
examples/rust/no_std/hello-world/support/rust/: rust-toolchain-esp32c3.toml  rust-toolchain-esp32s3.toml
examples/rust/no_std/hello-world/support/wokwi/: diagram-esp32s2.json  diagram-esp32s3.json  wokwi-esp32h2.toml  wokwi-esp32s2.toml  wokwi-esp32s3.toml
examples/rust/std/: README.md
examples/rust/std/hello-world/: Cargo.toml
examples/rust/std/hello-world/.cargo/: config.toml
examples/rust/std/hello-world/src/: main.rs
examples/toit/: README.md
examples/toit/hello_world/: hello_world.toit
examples/zig/esp-idf-v5/get-started/hello_world/: CMakeLists.txt  build.zig  build.zig.zon
examples/zig/esp-idf-v5/get-started/hello_world/main/: CMakeLists.txt  hello.zig  placeholder.c
support/python/: gen_esp32part.py  littlefs_generate.py
support/wokwi/: diagram-esp32c6.json  diagram-esp32s3.json  wokwi-esp32c3.toml  wokwi-esp32c6.toml
tests/python/circuitpython/: test-circuitpython.sh
tools/tera-template/: Cargo.toml
tools/tera-template/src/: main.rs
tools/tera-template/templates/base/: diagram.json  wokwi.toml
tools/tera-template/templates/features/bluetooth/: feature_bluetooth.tpl
tools/tera-template/templates/features/wifi/: feature_wifi.tpl
