[package]
name = "hello-world"
version = "0.1.0"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.17.0" }
esp-backtrace = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32"] }
esp-alloc = { version = "0.3.0" }
