[package]
name = "hello-world"
version = "0.1.0"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = { version = "0.17.0", optional = true, default-features = false }
esp32s2-hal = { version = "0.14.0", optional = true, default-features = false }
esp32s3-hal = { version = "0.14.0", optional = true, default-features = false }
esp32c3-hal = { version = "0.14.0", optional = true, default-features = false }
esp32c6-hal = { version = "0.7.0", optional = true, default-features = false }
esp32h2-hal = { version = "0.5.0", optional = true, default-features = false }

esp-alloc = { version = "0.3.0" }
esp-backtrace = { version = "0.10.0", features = [ "panic-handler", "exception-handler", "print-uart"], optional = true}
esp-println = { version = "0.8.0", features = [ ], optional = true}


[features]
# default = [ "esp32" ]
esp32 =   [ "esp32-hal",   "esp-backtrace/esp32", "esp-println/esp32" ]
esp32s2 = [ "esp32s2-hal", "esp-backtrace/esp32s2", "esp-println/esp32s2" ]
esp32s3 = [ "esp32s3-hal", "esp-backtrace/esp32s3", "esp-println/esp32s3" ]
esp32c3 = [ "esp32c3-hal", "esp-backtrace/esp32c3", "esp-println/esp32c3" ]
esp32c6 = [ "esp32c6-hal", "esp-backtrace/esp32c6", "esp-println/esp32c6" ]
esp32h2 = [ "esp32h2-hal", "esp-backtrace/esp32h2", "esp-println/esp32h2" ]